--- a/src/templates/change_pass.html
+++ b/src/templates/change_pass.html
@@ -160,7 +160,7 @@
               <span class="mdi mdi-format-line-spacing"></span>
             </button>
             <form action="/logout" method="POST" class="align-self-center ms-auto">
-              <input type="hidden" id="csrf_token" name="csrf_token">
+              <input hidden name="csrf_token" value="{{ csrf_token }}">
               <button type="submit" class="btn btn-danger">Logout</button>
           </form>
           </div>
@@ -197,7 +197,7 @@
                               <input name="re_pass" type="password" class="form-control" id="re_pass" placeholder="Re-Type your New Password" required>
                             </div>
                         </div>
-                        <input type="hidden" id="csrf_token" name="csrf_token">
+                        <input hidden name="csrf_token" value="{{ csrf_token }}">
                         <button type="submit" class="btn btn-primary me-2 float-end">Submit</button>
                       </form>
                     </div>
