--- a/src/templates/config_details.html
+++ b/src/templates/config_details.html
@@ -161,7 +161,7 @@
               <span class="mdi mdi-format-line-spacing"></span>
             </button>
             <form action="/logout" method="POST" class="align-self-center ms-auto">
-              <input type="hidden" id="csrf_token" name="csrf_token">
+              <input hidden name="csrf_token" value="{{ csrf_token }}">
               <button type="submit" class="btn btn-danger">Logout</button>
           </form>
                    
@@ -210,7 +210,7 @@
                           <input name="chat_id" type="password" class="form-control" id="chat_id" placeholder="Chat ID" value="{{ telegram_details['chatId'] }}">
                         </div>
                       </div>
-                      <input type="hidden" id="csrf_token" name="csrf_token">
+                      <input hidden name="csrf_token" value="{{ csrf_token }}">
                       <button type="submit" class="btn btn-primary me-2 float-end">Submit</button>
                     </form>
                   </div>
