--- a/src/templates/gateways_list.html
+++ b/src/templates/gateways_list.html
@@ -161,7 +161,7 @@
               <span class="mdi mdi-format-line-spacing"></span>
             </button>
             <form action="/logout" method="POST" class="align-self-center ms-auto">
-              <input type="hidden" id="csrf_token" name="csrf_token">
+              <input hidden name="csrf_token" value="{{ csrf_token }}">
               <button type="submit" class="btn btn-danger">Logout</button>
           </form>
           </div>
